--- a/public/about.html
+++ b/public/about.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Our project just needs Font Awesome solid + brand -->
-    <script defer src="../fontawesome-free/js/brands.js"></script>
-    <script defer src="../fontawesome-free/js/solid.js"></script>
-    <script defer src="../fontawesome-free/js/fontawesome.js"></script>
-    <link rel="stylesheet" href="../css/style.css" />
-    <script src="../src/js/ism-2.2.min.js"></script>
+    <script defer src="fontawesome-free/js/brands.js"></script>
+    <script defer src="fontawesome-free/js/solid.js"></script>
+    <script defer src="fontawesome-free/js/fontawesome.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="src/js/ism-2.2.min.js"></script>
     <title>Clinigen clone</title>
   </head>
 
@@ -263,9 +263,9 @@
         </div>
 
         <div id="header_bot">
-          <a href="../index.html">
+          <a href="index.html">
             <img
-              src="../images/clinigen-logo.png"
+              src="/public/images/clinigen-logo.png"
               alt="logo"
               class="header_bot_logoClinigen"
             />
@@ -274,7 +274,7 @@
             <nav>
               <ul>
                 <li>
-                  <a href="../mission.html">Mission</a>
+                  <a href="mission.html">Mission</a>
                 </li>
                 <li>
                   <a href="javascript:" class="menuHowCanWeHelp"
@@ -282,7 +282,7 @@
                   ></a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuProductsServices stayActif"
+                  <a href="javascript:" class="menuProductsServices"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -376,11 +376,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li>
-                <a href="managed-access-programs.html"
-                  >Managed Access Programs (Cliniport)</a
-                >
-              </li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -467,183 +463,163 @@
     <main>
       <div class="mainHeaderProducts">
         <div class="mainHeaderProducts_contain">
-          <span>SERVICES</span>
-          <h3 style="width: 1000px">MEDICAL SCIENCE LIAISON (MSL)</h3>
+          <span>COMPANY</span>
+          <h3>ABOUT US</h3>
         </div>
+      </div>
+      <!----------------------------------------------- MENU FIXED ----------------------------------->
+      <div class="menuFixed">
+        <ul>
+          <li><a href="javascript:">About Clinigen</a></li>
+          <li><a href="javascript:">Key Facts</a></li>
+        </ul>
       </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
       <div class="containerProducts">
         <div class="contain_L">
           <div class="contain_L_1">
+            <h3>ABOUT CLINIGEN</h3>
             <h4>
-              Medical Science Liaison first appeared 50 years ago to provide
-              physicians with information about a company’s medicine. Sometimes,
-              that’s where an MSL’s usefulness begins and ends.
+              Clinigen (Clinigen Group) is a global pharmaceutical and services
+              company with a unique combination of businesses focused on
+              providing access to medicines to improve the quality of people's
+              lives around the world.
             </h4>
             <p>
-              They partner with stakeholders throughout the medicine’s
-              lifecycle, adding scientific value at every phase.
+              We are the global leading experts, trusted by both pharmaceutical
+              and biotech companies and healthcare professionals, in providing
+              access to medicines throughout the lifecycle of a medicine;
+              clinical trials, unlicensed and commercial supply.
             </p>
-
             <p>
-              They can identify and define clinical objectives in a chosen
-              market and make sure they’re implemented compliantly. For example,
-              collaborating with stakeholders to develop and operationalise a
-              Managed Access Program
+              Clinigen’s mission is to deliver the right medicine to the right
+              patient at the right time operating in three areas of global
+              medicine supply: clinical trials, unlicensed and licensed
+              medicines.
             </p>
-
             <p>
-              Their unrivalled expertise helps their clients to raise disease
-              awareness, discover unmet needs and build lasting relationships
-              with a wide range of physicians.
+              Operating in a complex regulatory environment, Clinigen is the
+              only company to globally manage access to medicine across all
+              three routes worldwide. We understand the complex challenges
+              facing Pharmaceutical and Biotech companies and are uniquely
+              placed to provide the solutions to help.
             </p>
-
             <p>
-              Clinigen MSLs have a devoted interest in their therapy area and
-              passion for providing patients with access to medicine that lend
-              the authority physicians trust and value. Their passion matches
-              their knowledge.
+              Clinigen add insight, expertise and value at every stage of a
+              product’s lifecycle, supporting pharmaceutical companies and
+              healthcare professionals from clinical trials, unlicensed supply
+              and full commercialisation of medicines. That is why, for over 30
+              years, Clinigen has been trusted by industry and healthcare
+              providers to enable access to more innovative medicines, in more
+              countries, for more patients than anyone else.
             </p>
-
-            <p>
-              They commit for the long term – creating a golden thread of
-              opportunity that starts before a medicine is approved and
-              stretches beyond its launch, bringing maximum benefit to the
-              patient.
-            </p>
+          </div>
+          <div class="contain_L_3">
+            <h3>KEY FACTS</h3>
+            <div class="listeNumber">
+              <div class="listeNumber_card">
+                <img src="/public/images/human.JPG" alt="" /><span>>800</span>
+                <p>global team of experts across 13 locations</p>
+              </div>
+              <div class="listeNumber_card">
+                <img src="/public/images/target.JPG" alt="" /><span>4m</span>
+                <p>units shipped across 130 countries</p>
+              </div>
+              <div class="listeNumber_card">
+                <img src="/public/images/pizza.JPG" alt="" /><span>+6,000</span>
+                <p>pharmacists and 250 pharmaceutical company partnerships</p>
+              </div>
+              <div class="listeNumber_card">
+                <img src="/public/images/earth.JPG" alt="" /><span>130</span>
+                <p>local knowledge in 130 countries across the world</p>
+              </div>
+            </div>
+          </div>
+          <div class="contain_L_4">
+            <h4>
+              Clinigen is unique in its ability to operate across all three
+              stages of the drug lifecycle.
+            </h4>
+            <!--------------------------------------- TIROIR 1 ------------------------------------------------>
+            <div class="tiroir1">
+              <div class="clickTiroir1">
+                <h4>Unique Experience</h4>
+                <span class="iconeTiroir1"></span>
+                <span class="iconeTiroir2"></span>
+              </div>
+              <p>
+                Through Clinigen’s infrastructure and global sourcing capability
+                we rapidly and compliantly supply unlicensed medicines around
+                the world. We use our local market knowledge and global
+                regulatory expertise to navigate country-specific regulations,
+                ensuring compliant access to unlicensed medicines for
+                pharmacists and physicians
+              </p>
+            </div>
+            <!--------------------------------------- TIROIR 2 ------------------------------------------------>
+            <div class="tiroir2">
+              <div class="clickTiroir2">
+                <h4>Ethical Service Delivery</h4>
+                <span class="iconeTiroir1"></span>
+                <span class="iconeTiroir2"></span>
+              </div>
+              <p>
+                Clinigen’s established relationships within the pharmaceutical
+                and biotech industry mean that we have access to an extensive
+                portfolio of medicines, sourced either direct from the
+                manufacturer or through our validated supply chain to provide
+                the highest quality medicines.
+              </p>
+            </div>
+            <!--------------------------------------- TIROIR 3 ------------------------------------------------>
+            <div class="tiroir3">
+              <div class="clickTiroir3">
+                <h4>Thought Leadership</h4>
+                <span class="iconeTiroir1"></span>
+                <span class="iconeTiroir2"></span>
+              </div>
+              <p>
+                Trusted by both healthcare providers and pharmaceutical &
+                biotech companies to enable access to medicines, our dedicated,
+                in-house, global team of 500 experts manage your request
+                seamlessly, from initial enquiry through to timely and efficient
+                delivery of medicine. Always working within the appropriate
+                legal, regulatory and ethical frameworks, our global team ensure
+                you get the right medicine for your patient in the shortest
+                possible time. Our expertise extends across the entire lifecycle
+                of a medicine, including pre- and post-commercial stages. With
+                our unique ability to provide access to medicines, we can also
+                source and supply medicines for use in clinical trials and
+                provide access to our own portfolio of Clinigen owned, specialty
+                pharmaceutical medicines.
+              </p>
+            </div>
           </div>
           <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li>
-                <a href="managed-access-programs.html"
-                  >Managed Access Programs</a
-                >
-              </li>
-              <li><a href="clinical.html">Clinical Supplies Management</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Pharmaceutical & Biotech Companies</a></li>
+              <li><a href="#">About Clinigen</a></li>
             </ul>
           </div>
         </div>
         <div class="contain_R">
-          <!--------------------------------------- FORMULAIRE ------------------------------------------------>
-          <div class="formulaire">
-            <div class="formulaire_titre">
-              <span class="formulaire_imgLettre"></span>
-              <h4 class="formulaire_t">Get in touch</h4>
+          <div class="containtPurpleBack">
+            <div class="containPurple">
+              <h5>Online services for healtcare professionals</h5>
+              <ul>
+                <li><a href="#">Hard to find medicine (Clinigen Direct)</a></li>
+                <li>
+                  <a href="../products-services/managed-access-programs.html"
+                    >Managed Access Programs (Cliniport)</a
+                  >
+                </li>
+                <li><a href="#">Clinigen Products</a></li>
+                <li><a href="#">Special Obtains</a></li>
+                <li><a href="#">Aseptics UK</a></li>
+              </ul>
             </div>
-            <form action="">
-              <span class="formulaire_libelle">* Mandatory field</span>
-              <input
-                type="text"
-                name="Name Surname"
-                id="inputName"
-                placeholder="Name Surname*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="your@email.com"
-                id="inputMail"
-                placeholder="your@email.com*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="Organisation"
-                id="inputOrg"
-                placeholder="Organisation*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="Contact no."
-                id="inputNumber"
-                placeholder="Contact no.*"
-                class="formulaire_input"
-              />
-              <span class="formulaire_sousTitre"
-                >Reason for enquiry (select one)</span
-              >
-              <!------------------------------------ COMBO 1 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo1">
-                I am a healtcare professional...
-              </div>
-              <div class="formulaire_sousMenu1">
-                <ul>
-                  <li class="formulaire_option1">
-                    I am a healtcare professional...
-                  </li>
-                  <li class="formulaire_option1">Looking for a medicine</li>
-                  <li class="formulaire_option1">
-                    Trying to resolve a medicine shortage (EU and US)
-                  </li>
-                  <li class="formulaire_option1">
-                    Trying to resolve a medicine shortage (Asia, Australia)
-                  </li>
-                  <li class="formulaire_option1">
-                    With a medical information enquiry
-                  </li>
-                  <li class="formulaire_option1">
-                    Who would like to request a MSL visit
-                  </li>
-                </ul>
-              </div>
-              <!------------------------------------ COMBO 2 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo2">
-                I am an industry professional...
-              </div>
-              <div class="formulaire_sousMenu2">
-                <ul>
-                  <li class="formulaire_option2">
-                    I am an industry professional...
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with biological sample management
-                  </li>
-                  <li class="formulaire_option2">
-                    looking for support with clinigcal trial comparator sourcing
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with clinical trial services
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with early access / named patient
-                    medicine supply
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with managing a mature product portfolio
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with unlicensied supply of medicine into
-                    new markets
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with commercial partnerships
-                    (in-licensing/out-licensing)
-                  </li>
-                </ul>
-              </div>
-              <!------------------------------------ COMBO 3 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo3">
-                I have general questions about...
-              </div>
-              <div class="formulaire_sousMenu3">
-                <ul>
-                  <li class="formulaire_option3">
-                    I have general questions about...
-                  </li>
-                  <li class="formulaire_option3">Customer service</li>
-                  <li class="formulaire_option3">Investor relations</li>
-                  <li class="formulaire_option3">Invoicing/finance</li>
-                </ul>
-              </div>
-              <textarea name="Your message" id=""> </textarea>
-              <input
-                type="button"
-                value="Submit query"
-                class="formulaire_btn"
-              />
-            </form>
           </div>
         </div>
       </div>
@@ -727,7 +703,8 @@
     <script src="../src/js/header.js"></script>
     <script src="../src/js/hamburger.js"></script>
     <script src="../src/js/input.js"></script>
-    <script src="../src/js/form_combo.js"></script>
+    <script src="../src/js/healtcare_combo.js"></script>
+    <script src="/public/src/js/tiroir.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
