--- a/public/how-we-can-help/healtcare.html
+++ b/public/how-we-can-help/healtcare.html
@@ -857,7 +857,7 @@
     <script src="../src/js/input.js"></script>
     <script src="../src/js/tiroir.js"></script>
     <script src="../src/js/healtcare.js"></script>
-    <script src="../src/js/healtcare_combo.js"></script>
+    <script src="../src/js/form_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
