--- a/public/how-we-can-help/patient_group.html
+++ b/public/how-we-can-help/patient_group.html
@@ -744,7 +744,7 @@
     <script src="../src/js/hamburger.js"></script>
     <script src="../src/js/input.js"></script>
     <script src="../src/js/patient_group.js"></script>
-    <script src="../src/js/healtcare_combo.js"></script>
+    <script src="../src/js/form_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
