--- a/public/products-services/products.html
+++ b/public/products-services/products.html
@@ -359,7 +359,9 @@
                 <a href="real-world.html">Real World Data</a>
               </li>
               <li class="secondLi">
-                <a href="medical-science.html">Medical Science Liaison (MSLs)</a>
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
@@ -706,7 +708,7 @@
     <script src="../src/js/header.js"></script>
     <script src="../src/js/hamburger.js"></script>
     <script src="../src/js/input.js"></script>
-    <script src="../src/js/healtcare_combo.js"></script>
+    <script src="../src/js/form_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
