about terminé avec JS
+ modif dans la css

--- a/public/about.html
+++ b/public/about.html
@@ -30,20 +30,26 @@
               <ul>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="../images/flagUK.jpg" />Clinigen
-                    Autralia</a
+                    ><img
+                      class="flag"
+                      src="/public/images/flagUK.jpg"
+                    />Clinigen Autralia</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="../images/flagFR.png" />Clinigen
-                    France</a
+                    ><img
+                      class="flag"
+                      src="/public/images/flagFR.png"
+                    />Clinigen France</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="../images/flagDE.png" />Clinigen
-                    Germany</a
+                    ><img
+                      class="flag"
+                      src="/public/images/flagDE.png"
+                    />Clinigen Germany</a
                   >
                 </li>
               </ul>
@@ -386,7 +392,7 @@
       </div>
       <!-------------------------- HAMBURGER ---------------------------->
       <div class="headerHamburger">
-        <a href="../index.html"> <div class="logoClinigenHamburger"></div></a>
+        <a href="index.html"> <div class="logoClinigenHamburger"></div></a>
         <div class="menuHamburger">
           <div class="hamburger"><span></span><span></span><span></span></div>
           Menu
@@ -468,14 +474,14 @@
         </div>
       </div>
       <!----------------------------------------------- MENU FIXED ----------------------------------->
-      <div class="menuFixed">
+      <div class="menuFixed_about">
         <ul>
           <li><a href="javascript:">About Clinigen</a></li>
           <li><a href="javascript:">Key Facts</a></li>
         </ul>
       </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
-      <div class="containerProducts">
+      <div class="containerAbout">
         <div class="contain_L">
           <div class="contain_L_1">
             <h3>ABOUT CLINIGEN</h3>
@@ -548,12 +554,13 @@
                 <span class="iconeTiroir2"></span>
               </div>
               <p>
-                Through Clinigen’s infrastructure and global sourcing capability
-                we rapidly and compliantly supply unlicensed medicines around
-                the world. We use our local market knowledge and global
-                regulatory expertise to navigate country-specific regulations,
-                ensuring compliant access to unlicensed medicines for
-                pharmacists and physicians
+                Our unique combination of synergistic businesses enables us to
+                centrally manage access to treatments for patients across the
+                clinical trial, unlicensed and commercial routes. For more than
+                30 years, we have been trusted by industry and healthcare
+                professionals the world over to enable access to more innovative
+                medicines, in more countries, for more patients than anyone
+                else.
               </p>
             </div>
             <!--------------------------------------- TIROIR 2 ------------------------------------------------>
@@ -594,13 +601,46 @@
                 pharmaceutical medicines.
               </p>
             </div>
+            <!--------------------------------------- TIROIR 4 ------------------------------------------------>
+            <div class="tiroir4">
+              <div class="clickTiroir4">
+                <h4>Specialist Focus</h4>
+                <span class="iconeTiroir1"></span>
+                <span class="iconeTiroir2"></span>
+              </div>
+              <ul>
+                <li>
+                  Clinigen’s global footprint extends to supplying 113 countries
+                  worldwide and our regulatory expertise and local market
+                  knowledge can address patient access needs anywhere in the
+                  world.
+                </li>
+              </ul>
+            </div>
+            <!--------------------------------------- TIROIR 5 ------------------------------------------------>
+            <div class="tiroir5">
+              <div class="clickTiroir5">
+                <h4>Global Reach</h4>
+                <span class="iconeTiroir1"></span>
+                <span class="iconeTiroir2"></span>
+              </div>
+              <ul>
+                <li>
+                  Clinigen’s global footprint extends to supplying 113 countries
+                  worldwide and our regulatory expertise and local market
+                  knowledge can address patient access needs anywhere in the
+                  world.
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Pharmaceutical & Biotech Companies</a></li>
-              <li><a href="#">About Clinigen</a></li>
+              <li><a href="mission.html">Mission</a></li>
+              <li><a href="#">Responsible business</a></li>
+              <li><a href="#">Operational excellence</a></li>
+              <li><a href="#">History</a></li>
             </ul>
           </div>
         </div>
@@ -618,6 +658,18 @@
                 <li><a href="#">Clinigen Products</a></li>
                 <li><a href="#">Special Obtains</a></li>
                 <li><a href="#">Aseptics UK</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="socialMedia">
+            <div class="socialMedia_title">
+              <img src="./images/earth.JPG" alt="" />
+              <h5>Social media</h5>
+            </div>
+            <div class="socialMedia_links">
+              <ul>
+                <li><a href="http://">@Clinigen</a></li>
+                <li><a href="http://">Linkedin</a></li>
               </ul>
             </div>
           </div>
@@ -700,11 +752,12 @@
         </div>
       </div>
     </footer>
-    <script src="../src/js/header.js"></script>
-    <script src="../src/js/hamburger.js"></script>
-    <script src="../src/js/input.js"></script>
-    <script src="../src/js/healtcare_combo.js"></script>
+    <script src="/public/src/js/header.js"></script>
+    <script src="/public/src/js/hamburger.js"></script>
+    <script src="/public/src/js/input.js"></script>
     <script src="/public/src/js/tiroir.js"></script>
+    <script src="/public/src/js/tiroir_about.js"></script>
+    <script src="/public/src/js/aboutUs_menuFixe.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
