--- a/public/how-we-can-help/patient_group.html
+++ b/public/how-we-can-help/patient_group.html
@@ -89,7 +89,7 @@
           <!-------------------------- SOUS MENU ABOUT ---------------------------->
           <div class="menuCache_about">
             <ul>
-              <li><a href="http://">About us</a></li>
+              <li><a href="../about.html">About us</a></li>
               <li><a href="http://">History</a></li>
               <li><a href="http://">Board of Directors</a></li>
               <li><a href="http://">Responsible business</a></li>
@@ -435,7 +435,8 @@
         <div class="sousMenuHamburgerCache_menu2">
           <ul>
             <li>
-              <a href="#">About Clinigen</a><i class="fas fa-angle-right"></i>
+              <a href="../about.html">About Clinigen</a
+              ><i class="fas fa-angle-right"></i>
             </li>
             <li>
               <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
@@ -531,7 +532,7 @@
           <div class="relatedLinksPatientGroup">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="#">About Clinigen</a></li>
+              <li><a href="../about.html">About Clinigen</a></li>
               <li><a href="../mission.html">Mission</a></li>
             </ul>
           </div>
