--- a/public/mission.html
+++ b/public/mission.html
@@ -90,7 +90,7 @@
           <!-------------------------- SOUS MENU ABOUT ---------------------------->
           <div class="menuCache_about">
             <ul>
-              <li><a href="http://">About us</a></li>
+              <li><a href="about.html">About us</a></li>
               <li><a href="http://">History</a></li>
               <li><a href="http://">Board of Directors</a></li>
               <li><a href="http://">Responsible business</a></li>
@@ -446,7 +446,8 @@
         <div class="sousMenuHamburgerCache_menu2">
           <ul>
             <li>
-              <a href="#">About Clinigen</a><i class="fas fa-angle-right"></i>
+              <a href="javascript:">About Clinigen</a
+              ><i class="fas fa-angle-right"></i>
             </li>
             <li>
               <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
