--- a/public/products-services/markets.html
+++ b/public/products-services/markets.html
@@ -89,7 +89,7 @@
           <!-------------------------- SOUS MENU ABOUT ---------------------------->
           <div class="menuCache_about">
             <ul>
-              <li><a href="http://">About us</a></li>
+              <li><a href="../about.html">About us</a></li>
               <li><a href="http://">History</a></li>
               <li><a href="http://">Board of Directors</a></li>
               <li><a href="http://">Responsible business</a></li>
@@ -439,7 +439,8 @@
         <div class="sousMenuHamburgerCache_menu2">
           <ul>
             <li>
-              <a href="#">About Clinigen</a><i class="fas fa-angle-right"></i>
+              <a href="../about.html">About Clinigen</a
+              ><i class="fas fa-angle-right"></i>
             </li>
             <li>
               <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
