--- a/public/our-brands.html
+++ b/public/our-brands.html
@@ -480,7 +480,7 @@
             Clinigen Group is a global pharmaceutical and services company with
             a unique combination of businesses focused on providing access to
             medicines to meet unmet patient need all over the world. Learn more
-            about<a href="mission.html"> Our Mission.</a>
+            about <a href="mission.html">Our Mission.</a>
           </p>
         </div>
         <div class="listBrands">
@@ -497,39 +497,85 @@
                 healthcare professionals provide global access to medicines for
                 patients with unmet medical need
               </p>
-              <a href="www.clinigengroup.com">www.clinigengroup.com</a>
+              <a href="http://www.clinigengroup.com" target="_blank"
+                >www.clinigengroup.com</a
+              >
             </div>
           </div>
           <div class="cardBrands">
-            <img src="../public/images/clinigen_logo_rgb.png" alt="" />
+            <img src="../public/images/clinigen_link_logo_rgb.png" alt="" />
             <div class="cardBrands_details">
               <p>
-                Clinigen’s mission is to deliver the right medicine to the right
-                patient at the right time, operating in three areas of global
-                medicine supply: clinical trials, unlicensed and licensed
-                medicines. In 2015 Clinigen acquired Idis, the global leader in
-                the specialist management of ethical, regulatory compliant and
-                efficient solutions to help pharmaceutical/biotech companies and
-                healthcare professionals provide global access to medicines for
-                patients with unmet medical need
+                The trusted partner in providing ethical, compliant access to
+                both unlicensed and commercial medicines in the regions of Asia,
+                Africa and Australasia, supporting healthcare professionals and
+                pharmaceutical industry partners to provide access to specialist
+                and hard to access medicines.
               </p>
-              <a href="www.clinigengroup.com">www.clinigengroup.com</a>
+              <a href="http://www.linkhealthcare.com.au" target="_blank"
+                >www.linkhealthcare.com.au</a
+              >
             </div>
           </div>
           <div class="cardBrands">
-            <img src="../public/images/clinigen_logo_rgb.png" alt="" />
+            <img
+              src="../public/images/quantumlogogreenrgb_2_300x113.png"
+              alt=""
+            />
             <div class="cardBrands_details">
               <p>
-                Clinigen’s mission is to deliver the right medicine to the right
-                patient at the right time, operating in three areas of global
-                medicine supply: clinical trials, unlicensed and licensed
-                medicines. In 2015 Clinigen acquired Idis, the global leader in
-                the specialist management of ethical, regulatory compliant and
-                efficient solutions to help pharmaceutical/biotech companies and
-                healthcare professionals provide global access to medicines for
-                patients with unmet medical need
+                Quantum operates through multiple business units across a number
+                of locations in the UK and Europe: Quantum Pharmaceutical,
+                Quantum Aseptics, UL Medicines, Pern, Colonis, Lamda and QM
+                Specials. Quantum offers a portfolio of innovative and
+                synergistic products and services covering the full unlicensed
+                to licensed product cycle from the manufacture and supply of
+                unlicensed medicines to the development and supply of licensed
+                medicines.
               </p>
-              <a href="www.clinigengroup.com">www.clinigengroup.com</a>
+              <a href="http://www.quantumpharmaceutical.co.uk" target="_blank"
+                >www.quantumpharmaceutical.co.uk</a
+              >
+            </div>
+          </div>
+          <div class="cardBrands">
+            <img
+              src="../public/images/clinigencsm-digital-logo-4x3.png"
+              alt=""
+            />
+            <div class="cardBrands_details">
+              <p>
+                Since 1997, Clinigen Clinical Supplies Management has offered a
+                dynamic range of fully integrated services to meet the complex
+                clinical supply challenges pharmaceutical and biotechnology
+                companies face. Part of the Clinigen Group’s global supply chain
+                facility and depot network, it combines market-leading clinical
+                trial services such as comparator sourcing, packaging and
+                labelling with biological sample management. Clinigen Clinical
+                Supplies Management delivers tailored solutions for clients to
+                ensure their clinical trials are a success, regardless of size
+                or scope, from Phase I to Phase IV projects.
+              </p>
+              <a href="http://clinigencsm.com" target="_blank"
+                >clinigencsm.com</a
+              >
+            </div>
+          </div>
+          <div class="cardBrands">
+            <img
+              src="../public/images/clinigen-iqonelogoblackgreyrgb.png"
+              alt=""
+            />
+            <div class="cardBrands_details">
+              <p>
+                iQone is a specialty pharmaceutical company with medical and
+                commercial operations across Europe and extensive experience in
+                the set-up and delivery of both Managed Access and commercial
+                solutions.
+              </p>
+              <a href="http:/iqone-healthcare.com" target="_blank"
+                >iqone-healthcare.com</a
+              >
             </div>
           </div>
         </div>
