--- a/public/products-services/partnering.html
+++ b/public/products-services/partnering.html
@@ -94,7 +94,7 @@
               <li><a href="http://">Board of Directors</a></li>
               <li><a href="http://">Responsible business</a></li>
               <li><a href="http://">Optional excellence</a></li>
-              <li><a href="http://">Our brands</a></li>
+              <li><a href="../our-brands.html">Our brands</a></li>
             </ul>
           </div>
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
@@ -439,7 +439,8 @@
         <div class="sousMenuHamburgerCache_menu2">
           <ul>
             <li>
-              <a href="../about.html">About Clinigen</a><i class="fas fa-angle-right"></i>
+              <a href="../about.html">About Clinigen</a
+              ><i class="fas fa-angle-right"></i>
             </li>
             <li>
               <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
