--- a/public/products-services/products.html
+++ b/public/products-services/products.html
@@ -94,7 +94,7 @@
               <li><a href="http://">Board of Directors</a></li>
               <li><a href="http://">Responsible business</a></li>
               <li><a href="http://">Optional excellence</a></li>
-              <li><a href="http://">Our brands</a></li>
+              <li><a href="../our-brands.html">Our brands</a></li>
             </ul>
           </div>
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
